sample-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-server-deployment
  labels:
    app: sample-server
spec:
#  replicas: 0
  selector:
    matchLabels:
      app: sample-server
  template:
    metadata:
      labels:
        app: sample-server
    spec:
      containers:
        - name: sample-server
          image: localhost:5000/jsfong/sample_server:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: sample-server
spec:
  type: ClusterIP
  selector:
    app: sample-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
